[gd_scene load_steps=10 format=2]

[ext_resource path="res://images/tmap/tilemap_packed.png" type="Texture" id=1]
[ext_resource path="res://images/player_01.png" type="Texture" id=2]
[ext_resource path="res://player.gd" type="Script" id=4]
[ext_resource path="res://fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://gameControl.gd" type="Script" id=6]
[ext_resource path="res://critter.tscn" type="PackedScene" id=7]

[sub_resource type="TileSet" id=1]
0/name = "tilemap_packed.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 14, 33, 33, 29 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 18, 18 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "tilemap_packed.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 288, 126 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 18, 18 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 19
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 401, 20.5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 6 )
critterScene = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 2, 2 )
tile_set = SubResource( 1 )
cell_size = Vector2( 18, 18 )
cell_quadrant_size = 8
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
cell_tile_origin = 1
format = 1
tile_data = PoolIntArray( 131074, 1, 13, 131075, 1, 15, 131076, 1, 131074, 131077, 1, 131074, 131078, 1, 131074, 131079, 1, 131074, 131080, 1, 13, 131081, 1, 14, 131082, 1, 14, 131083, 1, 15, 131084, 1, 131074, 131085, 1, 131074, 131086, 1, 131074, 131087, 1, 131074, 131088, 1, 13, 131089, 1, 14, 131090, 1, 14, 131091, 1, 15, 131092, 1, 131074, 131093, 1, 131074, 131094, 1, 131074, 131095, 1, 131074, 131096, 1, 13, 131097, 1, 15, 196610, 1, 65549, 196611, 1, 196617, 196612, 1, 131074, 196613, 1, 131074, 196614, 1, 131074, 196615, 1, 131074, 196616, 1, 196615, 196617, 1, 65550, 196618, 1, 65550, 196619, 1, 196618, 196620, 1, 131074, 196621, 1, 131074, 196622, 1, 131074, 196623, 1, 131074, 196624, 1, 196616, 196625, 1, 65550, 196626, 1, 65550, 196627, 1, 196619, 196628, 1, 131074, 196629, 1, 131074, 196630, 1, 131074, 196631, 1, 131074, 196632, 1, 131082, 196633, 1, 65551, 262146, 1, 65549, 262147, 1, 65551, 262148, 1, 131074, 262149, 1, 131074, 262150, 1, 131074, 262151, 1, 131074, 262152, 1, 65549, 262153, 1, 65550, 262154, 1, 65550, 262155, 1, 65551, 262156, 1, 131074, 262157, 1, 131074, 262158, 1, 131074, 262159, 1, 131074, 262160, 1, 65549, 262161, 1, 65550, 262162, 1, 65550, 262163, 1, 65551, 262164, 1, 131074, 262165, 1, 131074, 262166, 1, 131074, 262167, 1, 131074, 262168, 1, 65549, 262169, 1, 65551, 327682, 1, 65549, 327683, 1, 65551, 327684, 1, 131074, 327685, 1, 131074, 327686, 1, 131074, 327687, 1, 131074, 327688, 1, 65549, 327689, 1, 65550, 327690, 1, 65550, 327691, 1, 65551, 327692, 1, 131074, 327693, 1, 131074, 327694, 1, 131074, 327695, 1, 131074, 327696, 1, 65549, 327697, 1, 65550, 327698, 1, 65550, 327699, 1, 65551, 327700, 1, 131074, 327701, 1, 131074, 327702, 1, 131074, 327703, 1, 131074, 327704, 1, 65549, 327705, 1, 65551, 393218, 1, 65549, 393219, 1, 196617, 393220, 1, 131074, 393221, 1, 131074, 393222, 1, 131074, 393223, 1, 131074, 393224, 1, 196615, 393225, 1, 65550, 393226, 1, 65550, 393227, 1, 196618, 393228, 1, 131074, 393229, 1, 131074, 393230, 1, 131074, 393231, 1, 131074, 393232, 1, 196616, 393233, 1, 65550, 393234, 1, 65550, 393235, 1, 196619, 393236, 1, 131074, 393237, 1, 131074, 393238, 1, 131074, 393239, 1, 131074, 393240, 1, 131082, 393241, 1, 65551, 458754, 1, 65549, 458755, 1, 65551, 458756, 1, 131074, 458757, 1, 131074, 458758, 1, 131074, 458759, 1, 131074, 458760, 1, 65549, 458761, 1, 65550, 458762, 1, 65550, 458763, 1, 65551, 458764, 1, 131074, 458765, 1, 131074, 458766, 1, 131074, 458767, 1, 131074, 458768, 1, 65549, 458769, 1, 65550, 458770, 1, 65550, 458771, 1, 65551, 458772, 1, 131074, 458773, 1, 131074, 458774, 1, 131074, 458775, 1, 131074, 458776, 1, 65549, 458777, 1, 65551, 524290, 1, 131078, 524291, 1, 131079, 524292, 1, 131079, 524293, 1, 131079, 524294, 1, 131079, 524295, 1, 131079, 524296, 1, 131079, 524297, 1, 131079, 524298, 1, 131079, 524299, 1, 131080, 524300, 1, 131080, 524301, 1, 131081, 524302, 1, 131081, 524303, 1, 131081, 524304, 1, 131080, 524305, 1, 131080, 524306, 1, 131079, 524307, 1, 131079, 524308, 1, 131078, 524309, 1, 131078, 524310, 1, 131078, 524311, 1, 131080, 524312, 1, 131081, 524313, 1, 131078, 589826, 1, 65549, 589827, 1, 65551, 589828, 1, 131074, 589829, 1, 131074, 589830, 1, 131074, 589831, 1, 131074, 589832, 1, 65549, 589833, 1, 65550, 589834, 1, 65550, 589835, 1, 65551, 589836, 1, 131074, 589837, 1, 131074, 589838, 1, 131074, 589839, 1, 131074, 589840, 1, 65549, 589841, 1, 65550, 589842, 1, 65550, 589843, 1, 65551, 589844, 1, 131074, 589845, 1, 131074, 589846, 1, 131074, 589847, 1, 131074, 589848, 1, 65549, 589849, 1, 65551, 655362, 1, 65549, 655363, 1, 196617, 655364, 1, 131074, 655365, 1, 131074, 655366, 1, 131074, 655367, 1, 131074, 655368, 1, 196615, 655369, 1, 65550, 655370, 1, 65550, 655371, 1, 196618, 655372, 1, 131074, 655373, 1, 131074, 655374, 1, 131074, 655375, 1, 131074, 655376, 1, 196616, 655377, 1, 65550, 655378, 1, 65550, 655379, 1, 196619, 655380, 1, 131074, 655381, 1, 131074, 655382, 1, 131074, 655383, 1, 131074, 655384, 1, 131082, 655385, 1, 65551, 720898, 1, 65549, 720899, 1, 65551, 720900, 1, 131074, 720901, 1, 131074, 720902, 1, 131074, 720903, 1, 131074, 720904, 1, 65549, 720905, 1, 65550, 720906, 1, 65550, 720907, 1, 65551, 720908, 1, 131074, 720909, 1, 131074, 720910, 1, 131074, 720911, 1, 131074, 720912, 1, 65549, 720913, 1, 65550, 720914, 1, 65550, 720915, 1, 65551, 720916, 1, 131074, 720917, 1, 131074, 720918, 1, 131074, 720919, 1, 131074, 720920, 1, 65549, 720921, 1, 65551, 786434, 1, 65549, 786435, 1, 65551, 786436, 1, 131074, 786437, 1, 131074, 786438, 1, 131074, 786439, 1, 131074, 786440, 1, 65549, 786441, 1, 65550, 786442, 1, 65550, 786443, 1, 65551, 786444, 1, 131074, 786445, 1, 131074, 786446, 1, 131074, 786447, 1, 131074, 786448, 1, 65549, 786449, 1, 65550, 786450, 1, 65550, 786451, 1, 65551, 786452, 1, 131074, 786453, 1, 131074, 786454, 1, 131074, 786455, 1, 131074, 786456, 1, 65549, 786457, 1, 65551, 851970, 1, 65549, 851971, 1, 196617, 851972, 1, 131074, 851973, 1, 131074, 851974, 1, 131074, 851975, 1, 131074, 851976, 1, 196615, 851977, 1, 65550, 851978, 1, 65550, 851979, 1, 196618, 851980, 1, 131074, 851981, 1, 131074, 851982, 1, 131074, 851983, 1, 131074, 851984, 1, 196616, 851985, 1, 65550, 851986, 1, 65550, 851987, 1, 196619, 851988, 1, 131074, 851989, 1, 131074, 851990, 1, 131074, 851991, 1, 131074, 851992, 1, 131082, 851993, 1, 65551, 917506, 1, 131085, 917507, 1, 131087, 917508, 1, 131074, 917509, 1, 131074, 917510, 1, 131074, 917511, 1, 131074, 917512, 1, 131085, 917513, 1, 131086, 917514, 1, 131086, 917515, 1, 131087, 917516, 1, 131074, 917517, 1, 131074, 917518, 1, 131074, 917519, 1, 131074, 917520, 1, 131085, 917521, 1, 131086, 917522, 1, 131086, 917523, 1, 131087, 917524, 1, 131074, 917525, 1, 131074, 917526, 1, 131074, 917527, 1, 131074, 917528, 1, 131085, 917529, 1, 131087 )

[node name="player" type="Sprite" parent="."]
position = Vector2( 170, 36 )
texture = ExtResource( 2 )
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
margin_right = 1015.0
margin_bottom = 597.0

[node name="scorelbl" type="Label" parent="Control"]
margin_left = 821.0
margin_top = 9.0
margin_right = 921.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 2 )
text = "Score "

[node name="spawnTimer" type="Timer" parent="."]

[node name="startTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="shootTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 529, 306.5 )
shape = SubResource( 3 )

[connection signal="timeout" from="spawnTimer" to="." method="_on_spawnTimer_timeout"]
[connection signal="timeout" from="startTimer" to="." method="_on_startTimer_timeout"]
[connection signal="timeout" from="shootTimer" to="player" method="_on_shootTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="player" method="_on_Area2D_body_entered"]
